--- a/templates/mail/ownership_verification.pug
+++ b/templates/mail/ownership_verification.pug
@@ -3,16 +3,18 @@ html
 	head
 		meta(charset='UTF-8')
 		meta(name='viewport' content='width=device-width, initial-scale=1.0')
-		title Verify Your Email Address
+		title Verify Ownership of #{vendor}
 		style
 			include style.css
 	body
 		div(class='container')
-			h2 Verify Your Email Address, #{username}!
-			p We are excited to have you on board. Please click the button below to verify your email address:
+			h2 Hey #{username}!
+			p To verify your ownership of #{vendor}, please click the button below:
 			p
-				a(class='btn', href=link) Verify Email Address
+				a(class='btn', href=link) Verify
 			p If the button above doesn't work, you can also copy and paste the following link into your web browser:
 			p #{link}
+			p 
+			p If you did not request ownership of #{vendor} on VendorDB, or you are not #{username}, please ignore this email.
 			p Cheers,
 			p VendorDB
